--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -452,6 +452,7 @@ h1, h2, h3, h4 {
     color: var(--text-muted);
     font-size: 0.8rem;
     line-height: 1.4;
+    margin-bottom: 7px;
 }
 
 /* --- FIX FINAL : CENTRAGE OPTIQUE --- */
